fix: Bug with transparency on mobile, plus make yellow a variable

--- a/assets/css/_diversion_page.scss
+++ b/assets/css/_diversion_page.scss
@@ -1,3 +1,5 @@
+@use "./color/definitions" as semantic;
+
 .l-diversion-page {
   display: grid;
   // Default layout is linear
@@ -92,8 +94,12 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+
+.l-diversion-page__header,
+.l-diversion-page__panel {
   &.active-detour {
-    background-color: $color-lemon-100;
+    background-color: semantic.$active-detour;
   }
 }
 
